--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-image-picker": "^7.1.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
